atd/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: atd
  template:
    metadata:
      labels:
        app: atd
    spec:
      securityContext:
        runAsUser: 1005
        runAsGroup: 1001
      containers:
      - name: automatic-transmission-daemon
        image: ghcr.io/x81k25/automatic-transmission-daemon
        imagePullPolicy: Always
        ports:
        - containerPort: 9091
        volumeMounts:
        - name: complete-volume
          mountPath: /media-cache/complete
        - name: incomplete-volume
          mountPath: /media-cache/incomplete
      volumes:
      - name: complete-volume
        hostPath:
          path: /d/media-cache/ENV/complete
          type: DirectoryOrCreate
      - name: incomplete-volume
        hostPath:
          path: /d/media-cache/ENV/incomplete
          type: DirectoryOrCreate
      imagePullSecrets:
      - name: ghcr-pull-image-token
