atd/base/service.yaml
# ./base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: atd
spec:
  type: NodePort
  ports:
  - port: 9091
    targetPort: 9091
    nodePort: 30091
  selector:
    app: atd
